# Computer-Vision-miniprojects

./: README.md
chroma_correction/: README.md  functions.h  main.cpp
edges_optical_flow/: CMakeLists.txt  README.md  fsiv_funcs.cpp  fsiv_funcs.hpp  fsiv_main_p4.cpp
hdr/: CMakeLists.txt  README.md  fsiv_funcs.cpp  fsiv_funcs.hpp  fsiv_main_p2.cpp
p1/: CMakeLists.txt  functions.cpp  main.cpp
p2/: fsiv_funcs.cpp  fsiv_funcs.hpp  fsiv_main_p2.cpp
p3/: CMakeLists.txt  fsiv_funcs.hpp
p4/: fsiv_funcs.cpp  fsiv_funcs.hpp
vision_3d/: README.md  fsiv_funcs.cpp  fsiv_funcs.hpp  fsiv_main_p3.cpp
